# DatasetOps-Vision-Lab

./: .gitignore  AGENTS.md  DECISIONS.md  DESIGN.md  PROJECT_CONTEXT.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/web/: package.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: dashboard.test.tsx  datasetops-dashboard.tsx
apps/web/src/lib/: fast-scan.test.ts  fast-scan.ts  report.test.ts  report.ts
engine/python/: pyproject.toml
engine/python/src/datasetops_engine/: __init__.py  cli.py  confusion.py  constants.py  hashing.py  image_quality.py  imbalance.py  leakage.py  models.py  recommendation.py  report_exporter.py  report_schema.py  scanner.py  scoring.py
engine/python/tests/: test_engine_scan.py
scripts/: engine.py
tests/e2e/: dashboard.spec.ts
tests/fixtures/: latest-report.json
