[project]
name = "datasetops-engine"
version = "0.1.0"
description = "Local-first computer vision dataset audit engine for DatasetOps Vision Lab."
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "opencv-python>=4.10",
  "pillow>=10.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "jsonschema>=4.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
